# mackie-control-adapter

./: .gitignore  CMakeLists.txt  README.md
include/: AbstractControlSurface.hpp  MidiInterface.hpp  RMETotalMix.hpp  RMETotalMixConstants.h  main.hpp  time_helpers.h
include/ControlSurface/: Echo.hpp  Yamaha01V96MIDIRemote.hpp
src/: AbstractControlSurface.cpp  MidiInterface.cpp  RMETotalMix.cpp  RMETotalMixConstants.cpp  main.cpp  time_helpers.cpp
src/ControlSurface/: Echo.cpp  Yamaha01V96MIDIRemote.cpp
